[package]
name = "generate-axum-csv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
axum = "0.7.5"
chrono = "0.4.38"
csv = "1.3.0"
dotenv = "0.15.0"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "tls-native-tls", "uuid", "chrono", "mysql", "json"] }
tokio = { version = "1.36.0", features = ["full"] }
